force-app/main/default/objects/FieldDefinition__mdt/FieldDefinition__mdt.object-meta.xml
<CustomObject>
    <description>Contains all the metadata about our fields on the objects we use. Our &quot;Data Dictionary&quot;</description>
    <label>FieldDefinition</label>
    <pluralLabel>FieldDefinitions</pluralLabel>
</CustomObject>