force-app/main/default/objects/FieldDefinition__mdt/fields/Enitity_Definition__c.field-meta.xml
<CustomField>
    <fullName>Enitity_Definition__c</fullName>
    <label>Enitity Definition</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>FieldDefinitions</relationshipLabel>
    <relationshipName>FieldDefinitions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>