force-app/main/default/objects/FieldDefinition__mdt/fields/FieldDefinition__c.field-meta.xml
<CustomField>
    <fullName>FieldDefinition__c</fullName>
    <label>FieldDefinition</label>
    <metadataRelationshipControllingField>FieldDefinition__mdt.Enitity_Definition__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>FieldDefinitions</relationshipLabel>
    <relationshipName>FieldDefinitions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>