force-app/main/default/objects/FieldDefinition__mdt/fields/ObjectDefinition__c.field-meta.xml
<CustomField>
    <fullName>ObjectDefinition__c</fullName>
    <label>ObjectDefinition</label>
    <referenceTo>ObjectDefinition__mdt</referenceTo>
    <relationshipLabel>FieldDefinitions</relationshipLabel>
    <relationshipName>FieldDefinitions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>